# ttp-staleness

./: .detect-forge.toml  .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/specs/: 2026-05-11-detect-forge-rebrand-design.md
src/detect_forge/: __init__.py  cache.py  cli.py  common.py  settings.py
src/detect_forge/stale/: __init__.py  _dates.py  _proposals.py  attack_client.py  cli.py  embeddings.py  models.py  reporter.py  rule_parser.py  sigma_parser.py
src/detect_forge/stale/prompts/: diff_proposal.j2
src/detect_forge/stale/templates/: report.html.j2
src/ttp_staleness/: attack_client.py  cache.py  cli.py  models.py  reporter.py  rule_parser.py  scorer.py  settings.py
src/ttp_staleness/templates/: report.html.j2
tests/: conftest.py  test_attack_client.py  test_cache.py  test_cli.py  test_common.py  test_console.py  test_embeddings.py  test_models.py  test_proposals.py  test_reporter.py  test_rule_parser.py  test_scorer.py  test_settings.py  test_sigma_parser.py  test_stale_api.py  test_version.py
tests/fixtures/: enterprise-attack-mini.json
