[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "detect-forge"
version = "0.1.0"
description = "Detection engineering toolkit. One install, one config, one CI step."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "mitreattack-python>=3.0",
    "requests>=2.31",
    "pySigma>=0.10",
    "jinja2>=3.1",
    "fastembed>=0.4",
]

[project.urls]
Homepage = "https://github.com/Detect-Forge/detect-forge"
Repository = "https://github.com/Detect-Forge/detect-forge"
Issues = "https://github.com/Detect-Forge/detect-forge/issues"

[project.scripts]
detect-forge = "detect_forge.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "requests-mock>=1.11",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src/detect_forge"]
include = ["src/detect_forge/stale/templates/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["mitreattack.*", "sigma.*", "requests_mock.*", "fastembed.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit real services or download real models (skipped by default; opt-in via `pytest -m integration`)",
]
